Bug 612373 - Add "Span" option for Windows and Linux to "Set As Desktop Background". r=Gijs

Gnome introduced this in 2.30[0], Windows in 8[1].
Preview is just an "international prohibition symbol" to save the complicated
business of trying to calculate a semi-accurate one.

[0]
https://gitlab.gnome.org/GNOME/gnome-desktop/commit/8eb0886312751054e2e6d9b10eedbb0ddf180deb
https://bugzilla.gnome.org/show_bug.cgi?id=603551
[1]
https://superuser.com/questions/1061416/which-version-of-windows-introduced-the-span-wallpaper-style

Differential Revision: https://phabricator.services.mozilla.com/D23336

--HG--
extra : moz-landing-system : lando